Create customer endpoints
