# driven/postgres-repository/src/main/kotlin/com/sostisoft/adapters/customer/CustomerEntity.kt
@@ -1,0 +1,39 @@
+package com.sostisoft.adapters.customer
+
+import com.sostisoft.adapters.user.UserEntity
+import jakarta.persistence.*
+import java.net.URL
+import java.time.LocalDateTime
+
+@Entity
+@Table(name = "customers")
+class CustomerEntity(
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @Column(name = "customer_id")
+    val id: Long? = null,
+
+    @Column(nullable = false)
+    val name: String = "",
+
+    @Column(nullable = false)
+    val surname: String = "",
+
+    @Column(name = "photo_url")
+    var photoUrl: URL? = null,
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "created_by")
+    val createdBy: UserEntity? = null,
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "modified_by")
+    var modifiedBy: UserEntity? = null,
+
+    @Column(name = "created_at", nullable = false)
+    val createdAt: LocalDateTime = LocalDateTime.now(),
+
+    @Column(name = "updated_at")
+    var updatedAt: LocalDateTime = LocalDateTime.now()
+)
+
